Created abstracted user handler. Doesn't work yet!

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "Hanubi",
   "dependencies": {
     "connect": "^3.3.2",
-    "socket.io": "~1.0.0"
+    "socket.io": "~1.0.0",
+    "underscore": "^1.7.0"
   },
   "devDependencies": {
     "cookie": "^0.1.2",
