--- a/package.json
+++ b/package.json
@@ -1,20 +1,14 @@
 {
   "name": "Hanubi",
   "dependencies": {
-    "connect": "^3.3.2",
     "socket.io": "~1.0.0",
-    "underscore": "^1.7.0"
-  },
-  "devDependencies": {
-    "cookie": "^0.1.2",
-    "cookie-parser": "^1.3.3",
-    "express": "^4.10.0",
-    "express-session": "^1.9.1",
+    "underscore": "^1.7.0",
     "grunt": "~0.4.1",
     "grunt-concurrent": "~0.4.2",
     "grunt-contrib-connect": "^0.8.0",
-    "grunt-nodemon": "^0.3.0",
-    "session.socket.io": "^0.1.6"
+    "grunt-nodemon": "^0.3.0"
+  },
+  "devDependencies": {
   },
   "engines": {
     "node": ">=0.10.0"
