--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "Hanubi",
   "dependencies": {
-    "socket.io": "~1.0.0",
-    "underscore": "^1.7.0",
     "grunt": "~0.4.1",
     "grunt-concurrent": "~0.4.2",
     "grunt-contrib-connect": "^0.8.0",
-    "grunt-nodemon": "^0.3.0"
+    "grunt-nodemon": "^0.3.0",
+    "node-static": "^0.7.6",
+    "socket.io": "~1.0.0",
+    "underscore": "^1.7.0"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "engines": {
     "node": ">=0.10.0"
   }
